Another attempt to add map page

--- a/main.html
+++ b/main.html
@@ -314,6 +314,7 @@
   <div class="main-layout">
     <aside class="sidebar">
   <a href="quiz.html" class="sidebar-quiz-btn">Take the activity quiz 📝</a>
+  <a href="campus-map.html" class="sidebar-quiz-btn" style="margin-top: 10px;">Campus Map 🗺️</a>
       <h2>Categories</h2>
         <ul class="category-list">
           <li>📋 All</li>
